# epsmim

./: README.md
lab1/: .gitignore  CMakeLists.txt  README.md  main.cpp
lab1/1-no_optimization/: Makefile  roofline.html  run.sh  waveparams.cpp
lab1/2-O1/: Makefile  run.sh  waveparams.h  wavesim.cpp  wavesim.h
lab1/3-O2/: Makefile  run.sh  waveparams.h  wavesim.cpp  wavesim.h
lab1/4-O3/: Makefile  exceptions.h  wavesim.cpp
lab1/5-operation-reorganize/: Makefile  devcloud-run  main.cpp  run.sh  wavesim.cpp  wavesim.h
lab1/6-index-optimization/: Makefile  exceptions.h  roofline.html  wavesim.cpp
lab1/Fisrt try/: Makefile  main.cpp  plot.sh  run.sh  waveparams.cpp  wavesim.cpp  wavesim.h
lab1/docs/: Report.docx
lab2/: CMakeLists.txt
lab2/1-compiler-vectorization/: wavesim.cpp
lab2/2-ivdep/: wavesim.cpp
lab2/3-omp/: Makefile  roofline.html  wavesim.cpp  wavesim.h
lab2/4-avx2/: Makefile  main.cpp  roofline.html  run.sh  wavesim.cpp  wavesim.h
lab2/5-avx512/: q  roofline.html  wavesim.cpp  wavesim.h
lab2/docs/: Report.docx
lab3/: CMakeLists.txt
lab3/1-avx2/: roofline.html  run.sh  waveparams.cpp  waveparams.h  wavesim.cpp  wavesim.h
lab3/2-avx512/: Makefile  roofline.html  run.sh  wavesim.cpp  wavesim.h
lab3/docs/: Report.docx
lab4/: CMakeLists.txt
lab4/1-avx2/: Makefile  roofline.html  run.sh  waveparams.cpp  waveparams.h  wavesim.cpp  wavesim.h
lab4/2-avx512/: Makefile  run.sh  wavesim.cpp  wavesim.h
lab4/docs/: Report.docx
